--- a/src/App.css
+++ b/src/App.css
@@ -572,9 +572,11 @@ button {
 
 .card-image-container {
   width: 100%;
+  overflow: hidden;
   padding-bottom: 75%;
   position: relative;
-  overflow: hidden;
+  background-size: cover;
+  background-position: center;
 }
 
 .card-image-container img {
@@ -586,7 +588,13 @@ button {
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  overflow: hidden;
+  background-position: top;
+  background-size: 100%;
+  backface-visibility: hidden;
 }
+
+
 
 .custom-card-size {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
